tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__search_human.snap
---
source: tests/snapshots/cli_output.rs
expression: sanitized
---
1 results for 'rust' (hybrid search)

1. Rust Error Handling [0.02] project
   Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.
