tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__search_robot_json.snap
---
source: tests/snapshots/cli_output.rs
expression: json
---
{
  "status": "ok",
  "query": "rust",
  "search_type": "hybrid",
  "count": 1,
  "results": [
    {
      "id": "rust-error-handling",
      "name": "Rust Error Handling",
      "description": "Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.",
      "layer": "project",
      "score": 0.016393442,
      "quality": 0.48500001430511475,
      "is_deprecated": false
    }
  ]
}
