tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__show_human.snap
---
source: tests/snapshots/cli_output.rs
assertion_line: 56
expression: sanitized
---
Rust Error Handling
===================

ID:      rust-error-handling
Version: 0.1.0
Layer:   project
Source:  [TEMP_DIR]/.ms/archive/skills/by-id/rust-error-handling

Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.

Stats
----------------------------------------
Tokens:   87
Quality:  0.49
Indexed:  [TIMESTAMP]
Modified: [TIMESTAMP]
