tests/snapshots/snapshots/snapshot_tests__snapshots__cli_output__show_robot_json.snap
---
source: tests/snapshots/cli_output.rs
expression: json
---
{
  "status": "ok",
  "skill": {
    "id": "rust-error-handling",
    "name": "Rust Error Handling",
    "version": "0.1.0",
    "description": "Use Result<T, E> for recoverable errors and panic! for unrecoverable ones.",
    "author": null,
    "layer": "project",
    "deprecation_reason": null,
    "is_deprecated": false,
    "quality_score": 0.48500001430511475,
    "git_remote": null,
    "git_commit": null,
    "content_hash": "3f3bce240b546ff4bf6bd021b7b81c739cdc311aeddf8c90d06fc3ab7a6d0c80",
    "token_count": 87
  }
}
